--- a/locales/en.json
+++ b/locales/en.json
@@ -1,4 +1,25 @@
 {
+  "common": {
+    "save": "Save",
+    "cancel": "Cancel",
+    "delete": "Delete"
+  },
+  "auth": {
+    "login": "Login",
+    "logout": "Logout",
+    "register": "Register",
+    "email": "Email",
+    "password": "Password",
+    "firstname": "First Name",
+    "lastname": "Last Name",
+    "sign_into_account": "Sign in to your account",
+    "dont_have_account": "Don't have an account? Register",
+    "forgot_password": "Forgot your password?",
+    "create_account": "Create a new account",
+    "validation_required_fields": "Please fill in all required fields",
+    "validation_email": "Please enter a valid email address",
+    "validation_password": "Password must be at least 8 characters long and include at least one letter and one number"
+  },
   "home": {
     "welcome": "Welcome!"
   }
